src/test/compile-fail/restricted-keyword1.rs
// error-pattern:found `let` in restricted position

fn main() {
    alt true {
      {let} { }
    }
}
